--- a/app/assets/stylesheets/lightbox.scss
+++ b/app/assets/stylesheets/lightbox.scss
@@ -67,10 +67,10 @@
 
 .lightbox-close-btn {
   position: absolute;
-  top: 30px;
-  right: 25px;
+  top: -30px;
+  right: -25px;
   font: 30px/100% arial, sans-serif;
-  color: black;
+  color: white;
   opacity: 0.6;
   transition: color 200ms ease;
 
