Added Newsletter Signup

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 //=require_tree ./mixins
-@import 'global';
 @import "mixins/grid";
+@import "mixins/placeholder";
+@import 'global';
 @import 'home';
 @import 'themes';
 @import 'buttons';
