--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,9 +35,7 @@
         <div class="gallery-tools-prev"></div>
       </div>
       <div style="height: 40px; margin: 30px 0;" class="center">
-        <a class="btn btn-large btn-blue">
-          See More Projects
-        </a>
+        <%= link_to "See More Projects", projects_path, class: "btn btn-large btn-blue" %>
       </div>
       <h2>making art education more accessible</h2>
       <p>Doodles Academy works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles Academy takes care of the details.</p>
@@ -47,9 +45,14 @@
 
   <section class="hero">
     <img src="/assets/map-direction-image.jpg">
-    <p class="lead">
-      We create the map. <br/>
-      You choose the direction.
+    <p>
+      <span class="quote">
+        “Since [our daughter’s] school doesn't have an art curriculum, she has not been able to explore and learn about her passion until now. She has become more confident, articulate and definitely much happier since she's been enrolled in Doodles.”
+      </span>
+      <br/>
+      <span class="quote-person">
+        - Kara Bloom
+      </span>
     </p>
   </section>
 
@@ -57,29 +60,57 @@
     <div class="content">
       <h2>Support Doodles Academy</h2>
       <p class="lead">
-        Wow. This is so freaking awesome.
+        Access to art education is falling in America.
       </p>
-      <a class="btn btn-large btn-orange">
-        Donate Here
-      </a>
+      <div style="height: 40px; margin: 40px 0;" class="center">
+        <a class="btn btn-large btn-orange" >
+          Donate to Doodles Academy
+        </a>
+      </div>
+      <p>
+        In the last two decades alone, minorities experienced an almost 25% decrease in access to art education.
+      </p>
+      <p>
+        Donate to help strop the trend.
+      </p>
+    </div>
+  </section>
+  <section class="bg-accent-purple-darker">
+    <div class="content">
+      <h2>Sign Up for our Newsletter</h2>
+      <p class="lead">
+        Pick up your marker, it's time to get to work
+      </p>
+      <div class="homepage-newsletter-signup">
+        <div class="homepage-newsletter-signup-email">
+          <input class="input--text" type="text" placeholder="Your delightful email address">
+          <p style="line-height: 0; margin: 10px 0; padding: 0; font-size: 10px;">
+           Don't worry, we will never send you spam.
+          </p>
+        </div>
+        <div class="homepage-newsletter-signup-submit">
+          <a class="btn btn-large btn-orange">
+            Sign Up Here
+          </a>
+        </div>
+      </div>
+      <p>
+        Help support our vision that every child should receive a holistic arts education, irrespective of school budget, zip code, or student demographics by joining our community of supporters:
+      </p>
     </div>
   </section>
 
   <section class="hero">
     <img src="/assets/founder-section-sidebar.jpg">
-    <p class="lead">
-      From building blocks to blueprints, Doodles is there to help create the lessons that turn your students into their most expressive selves.
+    <p>
+      <span class="quote">
+        “With no art classes at her school, my daughter was floundering – always sketching, but frustrated by her lack of direction … We are grateful for the excellent guidance provided by Doodles Academy, which has filled a void in our daughter’s life.”
+      </span>
+      <br/>
+      <span class="quote-person">
+        - Laura Harris
+      </span>
     </p>
-  </section>
-
-  <section class="bg-accent-green">
-    <div class="content">
-      <h2>Sign Up for our Newsletter</h2>
-      <p class="lead">
-        OMG! A Newsletter?
-      </p>
-      <a class="btn btn-large btn-purple">Sign Up Here</a>
-    </div>
   </section>
 
   <section class="bg-accent-green">
@@ -94,9 +125,14 @@
 
   <section class="hero">
     <img src="/assets/founder-section-sidebar.jpg">
-    <p class="lead">
-      "Another Testimonial Maye" <br/>
-      - Tempest, A Better Person
+    <p>
+      <span class="quote">
+        “The online art classes provided by Doodles Academy are invaluable to me as a homeschool mom and teacher. … I also appreciated the flexibility of the program. We can adjust it to our life, schedule, and health.“
+      </span>
+      <br/>
+      <span class="quote-person">
+        - Erin Scott
+      </span>
     </p>
   </section>
 
