Adds support for submitting the Email subscribe form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 //=require_tree ./mixins
 @import "mixins/grid";
 @import "mixins/placeholder";
+@import "mixins/animation";
 @import 'global';
 @import 'home';
 @import 'themes';
