--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
     <div class="content">
       <h2>Support Doodles Academy</h2>
       <p class="lead">
-        Access to art education is falling in America.
+        Art education is failing in America.
       </p>
       <div style="height: 40px; margin: 40px 0;" class="center">
         <a class="btn btn-large btn-orange" >
@@ -71,7 +71,7 @@
         In the last two decades alone, minorities experienced an almost 25% decrease in access to art education.
       </p>
       <p>
-        Donate to help strop the trend.
+        Donate now to help us strop this trend.
       </p>
     </div>
   </section>
@@ -83,6 +83,7 @@
       </p>
       <div class="homepage-newsletter-signup">
         <div class="homepage-newsletter-signup-email">
+          <p class="homepage-newsletter-signup-message"></p>
           <input class="input--text" type="text" placeholder="Your delightful email address">
           <p style="line-height: 0; margin: 10px 0; padding: 0; font-size: 10px;">
            Don't worry, we will never send you spam.
@@ -95,7 +96,7 @@
         </div>
       </div>
       <p>
-        Help support our vision that every child should receive a holistic arts education, irrespective of school budget, zip code, or student demographics by joining our community of supporters:
+        Help support our vision that every child should receive a holistic arts education, irrespective of school budget, zip code, or student demographics by joining our community of supporters.
       </p>
     </div>
   </section>
