--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,145 +1,77 @@
+h2 {
+  font-weight: 600;
+  font-size: 2em;
+  letter-spacing: 0.1em;
+}
+
+section {
+  width: 100%;
+  margin: 100px 0;
+}
+
 .homepage {
+  text-align: center;
+}
+
+.lead {
+  display: block;
+  font-weight: 500;
+  font-size: 1.8em;
+  text-align: center;
+}
+
+.hero {
+  background-color: black;
   position: relative;
   margin: 0;
+  max-height: 480px;
+  padding: 0;
+  width: 100%;
+  overflow: hidden;
+}
 
-  & > section {
-    @include clearfix;
-    width: 100%;
+.hero__img {
+  opacity: 0.5;
+  width: 100%;
+  height: auto;
 
-    h2 {
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 16px;
-      position: relative;
-      padding-top: 1.5em;
-      margin: 0;
-
-      &:after {
-        content: "";
-      }
-    }
-
-    div.section-sidebar, div.section-text {
-      display: inline-block;
-      float: left;
-      width: $content-max-width;
-
-      &:last-child {
-        margin-left: 9%;
-      }
-    }
-
-    div.section-sidebar {
-      img {
-        width: 100%;
-      }
-    }
-
-    div.section-text {
-      p:first-child {
-        margin-top: 0;
-      }
-    }
+  .homepage .hero:first-child & {
+    opacity: 0.7;
   }
+}
 
-  section.boardmember {
-    @include clearfix;
+.hero__content {
+  color: white;
+  position: absolute;
+  width: 600px;
+  font-size: 1.6em;
+  font-weight: 400;
+  line-height: 1.5em;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: $hero-font;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
 
-    &:not(:last-child) {
-      margin-bottom: 160px;
-    }
-
-    div {
-      display: inline-block;
-      float: left;
-    }
-
-    div.portrait {
-      height: 300px;
-      width: 300px;
-      border-radius: 150px;
-    	-webkit-border-radius: 150px;
-    	-moz-border-radius: 150px;
-      overflow: hidden;
-
-      img {
-        height: 300px;
-        width: 300px;
-      }
-    }
-
-    div.biography {
-      height: 300px;
-      width: 500px;
-      padding-right: 40px;
-
-      &:nth-child(even) {
-        padding-right: inherit;
-        padding-left: 40px;
-      }
-    }
-
-  }
-
-  p.lead {
-    font-weight: 400;
-    font-size: 28px;
-    display: block;
-  }
-
-  section.hero {
-    max-height: 480px;
-    padding: 0;
-    background-color: black;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-  }
-
-  .hero img {
-    opacity: 0.5;
-    width: 100%;
-    height: auto;
-  }
-
-  .hero p {
-    color: #fff;
-    position: absolute;
-    max-width: 600px;
-    line-height: 1.8em;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-  }
-
-
-  .hero br {
-    margin: 0;
-    padding: 0;
-    line-height: 0;
-  }
-
-  .center {
-    text-align: center;
-  }
-
-  h1 {
-    text-align: right;
-    color: $primary-red;
-    text-transform: lowercase;
+  .homepage .hero:not(:first-child) & {
+    width: 800px;
   }
 }
 
 span.quote {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 2.3em;
+  font-family: $primary-body-font;
+  font-size: 1.2em;
+  line-height: 1.6em;
+  font-weight: 300;
+  font-style: italic;
+  text-transform: none;
 }
 
-span.quote-person {
-  font-size: 22px;
-  margin-top: 25px;
+span.quote__person {
   display: block;
+  font-size: 1.2em;
+  margin-top: 20px;
 }
 
 .content {
@@ -237,7 +169,7 @@ $error-highlight: lighten($primary-red, 15%);
   }
 
   &.is-error {
-    p.homepage-newsletter-signup-message {
+    .homepage-newsletter-signup-message {
       opacity: 1;
       color: $error-highlight;
       transition: opacity 100ms ease;
@@ -249,7 +181,7 @@ $error-highlight: lighten($primary-red, 15%);
   }
 }
 
-p.homepage-newsletter-signup-message {
+.homepage-newsletter-signup-message {
   position: absolute;
   top: -15px;
   left: 12px;
